checker/tests/nullness-extra/multiple-errors/Expected.txt
C1.java:2: error: [initialization.field.uninitialized] the default constructor does not initialize field o
    Object o;
           ^
C2.java:2: error: [assignment.type.incompatible] incompatible types in assignment.
    Object o = null;
               ^
  found   : null (NullType)
  required: @Initialized @NonNull Object
C3.java:4: error: cannot find symbol
            void bad(XXX p) {
                     ^
  symbol:   class XXX
  location: class C3b
C4.java:3: error: [dereference.of.nullable] dereference of possibly-null reference p
        p.toString();
        ^
4 errors
